--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "09_capture",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -11,7 +11,7 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.31.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
